<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".mainView.ui.mainView.MainViewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivMainLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:src="@drawable/mainlogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivMenuLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_castle"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:scaleType="centerCrop"
            android:src="@drawable/icbanner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:height="50dp"
            android:textColor="@color/white"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/josefinsansbold"
            android:gravity="center"
            android:text="@string/bienvenido"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/tvNowComing"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/josefinsansbold"
            android:gravity="center"
            android:text="@string/pr_ximos_estrenos"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNowComing"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNowComing" />

        <TextView
            android:id="@+id/tvPopular"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="50dp"
            android:fontFamily="@font/josefinsansbold"
            android:gravity="center"
            android:text="@string/pel_culas_m_s_populares"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@+id/rvNowComing" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopular"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPopular" />


        <TextView
            android:id="@+id/tvTopRated"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:fontFamily="@font/josefinsansbold"
            android:gravity="center"
            android:text="@string/las_mejores_valoradas"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@+id/rvPopular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopRated"
            android:layout_width="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:orientation="horizontal"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTopRated" />

        <TextView
            android:id="@+id/tvNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:fontFamily="@font/josefinsansbold"
            android:gravity="center"
            android:text="@string/pel_culas_del_momento"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@+id/rvTopRated" />


        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNowPlaying" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>